提交vm注释