@@ -3,6 +3,7 @@ package jvm;
 *
 *@author longwh
 *@since2019Äê3ÔÂ15ÈÕ
+*vm:-verbose:gc -Xms20M -Xmx20M -Xmn10M -XX:+PrintGCDetails -XX:SurvivorRatio=8
 */
 public class YoungGenGC {
 	public static void main(String[] args) {
